<resources>
    <string name="app_name">WeHud</string>
    <string name="empty_list">Nothing was found…</string>

    <string name="title_send">Send</string>
    <string name="title_games">Games</string>
    <string name="title_profile">Profile</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_publishers">Publisher(s)</string>
    <string name="title_developers">Developer(s)</string>
    <string name="title_genres">Genre(s)</string>
    <string name="title_esrb">ESRB Rating</string>
    <string name="title_events">Events</string>
    <string name="title_register">Register</string>
    <string name="title_login">Sign In</string>

    <string name="dialogTitle_addPage">New Page</string>
    <string name="dialogTitle_addFollower">Choose a follower</string>
    <string name="dialogTitle_addGame">Choose a game</string>
    <string name="dialogTitle_signingOut">Signing Out</string>
    <string name="dialogTitle_deleteAccount">Delete Account</string>
    <string name="dialogTitle_chooseAvatar">Choose an avatar</string>
    <string name="dialogTitle_choosePage">Choose a page</string>
    <string name="dialogTitle_newEvent">New Event</string>
    <string name="dialogTitle_chooseEventStartDateTime">Choose event start date and time</string>
    <string name="dialogTitle_chooseEventEndDateTime">Choose event end date and time</string>
    <string name="dialogTitle_createPlanning">Create A Planning</string>
    <string name="dialogTitle_deletePlanning">Delete Planning</string>
    <string name="dialogTitle_choosePlanning">Choose a planning</string>
    <string name="dialogTitle_eventUnbind">Unbind</string>
    <string name="dialogTitle_deleteEvent">Delete Event</string>
    <string name="dialogTitle_emailSent">Email Sent</string>
    <string name="dialogTitle_reward">Reward</string>

    <string name="dialogText_eventUnbind">Remove this event from planning %s?</string>
    <string name="dialogText_deleteEvent">Delete this event?</string>
    <string name="dialogText_reward">Congratulations, you just reached %1$d points! Now %2$s will grant you no less than %3$d point(s)!</string>

    <string name="dialogHint_newPassword">New Password</string>
    <string name="dialogHint_confirmNewPassword">Confirm New Password</string>
    <string name="dialogHint_show_password">Show Password</string>

    <string name="dialogMessage_removePage">Remove this page?</string>
    <string name="dialogMessage_deletePlanning">Delete this planning?</string>

    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_games">Games</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_post_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_event_add">Add Event</string>

    <string name="tab_myFeeds">My Feeds</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_plannings">Plannings</string>

    <string name="message_pageRemoved">Page %s has been removed</string>
    <string name="message_newPost">You published a post!</string>
    <string name="message_chooseElementInList">Please choose an element in the list.</string>
    <string name="message_exitApp">Exit the application?</string>
    <string name="message_deleteAccount">Are you sure you wish to delete this account? All related data will be lost!</string>
    <string name="message_noChangesToUpdate">No changes to update</string>
    <string name="message_updateSuccess">Your settings were updated</string>
    <string name="message_deleteSuccess">Your account has been deleted.</string>
    <string name="message_followingGame">You now follow %s</string>
    <string name="message_unfollowingGame">You no longer follow %s</string>
    <string name="message_followingUser">You now follow %s</string>
    <string name="message_unfollowingUser">You no longer follow %s</string>
    <string name="message_createEventSuccess">Event was successfully created</string>
    <string name="message_deleteEventSuccess">Event was deleted</string>
    <string name="message_addPlanningSuccess">A new planning has been created</string>
    <string name="message_deletePlanningSuccess">Planning has been deleted</string>
    <string name="message_eventBound">Event was added to planning %s</string>
    <string name="message_eventUnbound">Event was removed from planning %s</string>
    <string name="message_unboundPlanning">This planning has no events now</string>
    <string name="message_sendSuccess">Username or email was successfully sent. Please check your mails.</string>
    <string name="message_accountCreated">Your account has been created</string>

    <string name="hint_name">Name</string>
    <string name="hint_title">Title</string>
    <string name="hint_video">YouTube Video ID (Optional)</string>
    <string name="hint_text">What\'s up?</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_usernameOrEmail">Username or Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_description">Description</string>
    <string name="hint_planningTitle">Title</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirmPassword">Confirm Password</string>

    <string name="newPost_isOpinion">This post is an opinion about a game</string>
    <string name="newPost_btnAddGame">Add a game</string>
    <string name="newPost_btnAddFollower">Add a follower</string>
    <string name="newPost_game_defaultValue">No game specified</string>
    <string name="newPost_follower_defaultValue">No follower specified</string>
    <string name="newPost_isMessage">This post is for a follower</string>

    <string name="profile_toWall">Go to my Wall</string>
    <string name="profile_user">Go to Profile</string>
    <string name="profile_messages">Messages</string>
    <string name="profile_contacts">Contacts</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_logout">Sign Out</string>

    <string name="game">Game</string>
    <string name="game_title_firstReleaseDate">First Release Date</string>
    <string name="game_title_synopsis">Synopsis</string>
    <string name="game_title_website">Website</string>
    <string name="game_title_franchise">Franchise</string>
    <string name="game_title_mainGame">Main Game</string>
    <string name="game_title_modes">Mode(s)</string>
    <string name="game_title_pegi">PEGI Rating</string>
    <string name="game_firstReleaseDate">First Release Date</string>
    <string name="game_synopsis">Synopsis</string>
    <string name="game_website">Website</string>
    <string name="game_franchise">Franchise</string>
    <string name="game_mainGame">Main Game</string>
    <string name="game_modes">Mode(s)</string>

    <string name="settings_title_username">Username</string>
    <string name="settings_title_email">Email Address</string>
    <string name="settings_title_password">Password</string>
    <string name="settings_btnUpdate">Update Settings</string>
    <string name="settings_btnDelete">Delete Account</string>
    <string name="settings_btnChangeAvatar">Update Avatar</string>

    <string name="btnFollow">Follow</string>
    <string name="btnUnfollow">Unfollow</string>
    <string name="btnForgotPassword">I forgot my password</string>
    <string name="btnSend">Send</string>
    <string name="btnEvents">Events</string>
    <string name="btnCreatePlanning">Create a planning</string>
    <string name="btnCreateFirstEvent">Create first event</string>
    <string name="btnCreateFirstPlanning">Create my first planning</string>
    <string name="btnBind">Bind to a planning</string>
    <string name="btnUnbindPlanning">Unbind from planning %s</string>
    <string name="btnUnbindContains">Unbind from planning</string>
    <string name="btnUnbindEvents">Unbind all events</string>

    <string name="status">Status</string>
    <string name="status_released">Released</string>
    <string name="status_alpha" translatable="false">Alpha</string>
    <string name="status_beta">Beta</string>
    <string name="status_earlyAccess">Early Access</string>
    <string name="status_offline">Offline</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_unknown">Unknown</string>

    <string name="sample_email" translatable="false">email@address.com</string>
    <string name="sample_password" translatable="false">********</string>
    <string name="sample_score" translatable="false">1 POINT(S)</string>

    <string name="username">Username</string>
    <string name="datetime" translatable="false">dd/MM/yyyy HH:mm</string>
    <string name="text">Text</string>
    <string name="likes" translatable="false">1</string>
    <string name="publishers">Publisher(s)</string>
    <string name="developers">Developer(s)</string>
    <string name="genres">Genre(s)</string>
    <string name="pegi">PEGI Rating</string>
    <string name="esrb">ESRB Rating</string>
    <string name="score" translatable="false">POINT(S)</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="description">Description</string>

    <string name="add">Add</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_password">Password</string>
    <string name="numEvents">EVENT(S)</string>
    <string name="create_account">Create account</string>
    <string name="level"><u>Level:</u> <b>%d</b></string>
    <string name="rank"><u>Rank:</u> <b>%c</b></string>
    <string name="or">or</string>
    <string name="followers">1 FOLLOWER(S)</string>
    <string name="followerCount">FOLLOWER(S)</string>

    <string name="no_plannings">This user has not created a planning yet.</string>
    <string name="no_events">There are no events yet.</string>
    <string name="no_user_posts">This user has not posted anything yet.</string>
    <string name="no_posts">There are no posts to be found.</string>
    <string name="no_messages">There are no messages to be found.</string>
    <string name="no_games">There are no games to be found.</string>
    <string name="no_connected_plannings">You have not created a planning yet. Want to do so?</string>
    <string name="no_connected_events">You do not have created events yet.</string>

    <string name="new_publication">every new %s</string>
    <string name="new_binding">each %s binding</string>
    <string name="new_follow">following %s</string>

    <string name="error_passwords_no_match">Passwords do not match</string>
    <string name="error_fieldRequired">This field is required.</string>
    <string name="error_unknown">There was an error: code %s</string>
    <string name="error_invalidCredentials">Invalid credentials</string>
    <string name="error_server">There was an error with the server</string>
    <string name="error_general">There was an error while fetching the database: code %s</string>
    <string name="error_sessionExpired">Session expired</string>
    <string name="a">a</string>
</resources>
