<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_send"
        android:title="@string/menu_send"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_games"
        android:icon="@drawable/ic_games"
        android:title="@string/menu_games"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>