<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_bodyPadding">

    <EditText
        android:id="@+id/dialog_editField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editDialog_marginTop"
        android:hint="@string/dialogHint_newPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/dialog_confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editDialog_marginTop"
        android:hint="@string/dialogHint_confirmNewPassword"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/dialog_boxShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editDialog_marginTop"
        android:text="@string/dialogHint_show_password" />

</LinearLayout>