<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gameHeader_frameHeight"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_game_border"
            android:gravity="center"
            android:padding="@dimen/gameHeader_namePadding"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/game" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_game_border"
            android:drawableLeft="@drawable/ic_status_released"
            android:drawablePadding="@dimen/gameHeader_paddingLeftStart"
            android:drawableStart="@drawable/ic_status_released"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/gameHeader_paddingLeftStart"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/gameHeader_paddingLeftStart"
            tools:text="@string/status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/followers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_game_border"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/gameHeader_paddingLeftStart"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/gameHeader_paddingLeftStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/darker_gray"
            tools:text="@string/followers" />

        <Button
            android:id="@+id/btnFollowOrEvents"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_game_border"
            tools:text="@string/btnFollow" />

    </LinearLayout>

</LinearLayout>